--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: oleguer@kth.se
 description: >- # this means to ignore newlines until "baseurl:"
   All you need to know for your next coding interview
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://oleguercanal/algorithmics.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://oleguercanal.github.io/Algorithmics/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
