--- a/_config.yml
+++ b/_config.yml
@@ -17,15 +17,27 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+# Gems
+gems:
+  - jekyll-paginate
+
+plugins: [jekyll-paginate]
 
 title: Algorithmics
 email: oleguer@kth.se
 description: >- # this means to ignore newlines until "baseurl:"
   All you need to know for your next coding interview
-baseurl: "https://oleguercanal.github.io/Algorithmics/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://oleguercanal.github.io/Algorithmics/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+paginate: 1
+locale:       "en"
+
+# About/contact
+author:
+  name: Oleguer Canal
+  url: https://oleguercanal.github.io/Algorithmics/
 
 # Build settings
 theme: minima
